--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>기업형 레이아웃</title>
+  <title>기업형 인테리어 리모델링 </title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
   <script defer src="js/main.js"></script>
@@ -23,7 +23,6 @@
           <li><a href="#">COMMUNITY</a></li>
           <li><a href="#">GALLERY</a></li>
           <li><a href="#">LOCATION</a></li>
-          <li><a href="#">LOCATION</a></li>
         </ul>
 
         <ul class="util">
@@ -34,36 +33,20 @@
           <li><a href="#">SiteMap</a></li>
         </ul>
       </nav>
-
-      <!-- <a href="#" class="btnCall">
-        <span>메뉴호출</span>
-      </a> -->
-
-      <!-- <nav class="menuMo">
-        <h1>
-          <a href="#">DCODELAB</a>
-          <span>UI/UX DEVELPMENT INSTUTUTE</span>
-        </h1>
-        <ul id="gnbMo">
-          <li><a href="#">DEPARTMENT</a></li>
-          <li><a href="#">YOUTUBE</a></li>
-          <li><a href="#">COMMUNITY</a></li>
-          <li><a href="#">GALLERY</a></li>
-          <li><a href="#">LOCATION</a></li>
-        </ul>
-      </nav> -->
     </div>
   </header>
 
   <figure id="visual">
-    <video src="img/visual.mp4" autoplay loop muted></video>
+    <div class="pic">
+      <img src="img/figure.jpg" alt="건축 인테리어">
+    </div>
     <div class="inner">
       <h1>Lorem ipsum dolor sit amet.</h1>
       <p>Lorem ipsum dolor sit.</p>
     </div>
   </figure>
 
-  <section id="section">
+  <section id="information">
     <div class="inner">
       <h1>ABOUT US</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quisquam fugit maiores, sed
@@ -76,11 +59,59 @@
         sequi officia iusto expedita cum exercitationem.</p>
       <a href="#">More</a>
     </div>
+
+    <div class="QiuckJoin">
+      <h1>Lorem ipsum dolor sit.(빠른 상담 신청)</h1>
+      <form action="index.html">
+        <fieldset>
+          <legend class="hidden">빠른 상담 신청</legend>
+          <table>
+            <caption class="hidden">정보 입력양식 테이블</caption>
+            <tr>
+              <th scope="row"><label for="name">NAME</label></th>
+              <td>
+                <input type="text" id="name" required placeholder="이름을 입력해 주세요">
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row"><label for="PhoneNumber">PhoneNumber</label></th>
+              <td>
+                <input type="text" id="PhoneNumber" required placeholder="핸드폰 번호를 입력해 주세요">
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row"><label for="email">E-MAIL</label></th>
+              <td>
+                <input type="text" name="email" id="email" placeholder="이메일 주소를 입력해 주세요">
+                <select name="company" id="company">
+                  <option value="">선택하세요</option>
+                  <option value="naver">@naver.com</option>
+                  <option value="daum">@hanmail.net</option>
+                  <option value="nate">@nate.com</option>
+                </select>
+              </td>
+            </tr>
+
+            <div class="agreement">
+              <input type="checkbox" name="agree" id="agree">
+              <label for="agree">약관에 동의합니다</label>
+            </div>
+
+            <tr>
+              <th colspan="1">
+                <input type="submit" value="SUBMIT">
+              </th>
+            </tr>
+          </table>
+        </fieldset>
+      </form>
+    </div>
   </section>
-  <!-- 
-  <section id="brand">
+
+  <!-- <section id="services">
     <div class="inner">
-      <h1>BRAND IDENTITY</h1>
       <div class="wrap">
         <article>
           <i class="fas fa-barcode"></i>
@@ -88,19 +119,12 @@
           <p>Lorem ipsum dolor sit amet.</p>
           <a href="#">VIEW DETAIL</a>
         </article>
-        <article>
-          <img src="img/brand1.jpg" alt="브랜드1 이미지">
-        </article>
-        <article>
-          <img src="img/brand2.jpg" alt="브랜드2 이미지">
-        </article>
-        <article>
-          <img src="img/brand3.jpg" alt="브랜드3 이미지">
-        </article>
-      </div>
-    </div>
-  </section>
 
+   
+      </div>
+    </div> 
+  </section>
+  
   <section id="banner">
     <div class="inner">
       <h1>Lorem ipsum dolor sit amet consectetur.</h1>
