html구조 짜는중

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     </div>
   </figure>
 
+  <!-- 짧은 액션폼부여 -->
   <section id="information">
+
     <div class="inner">
       <h1>ABOUT US</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quisquam fugit maiores, sed
@@ -110,21 +112,102 @@
     </div>
   </section>
 
-  <!-- <section id="services">
-    <div class="inner">
-      <div class="wrap">
-        <article>
-          <i class="fas fa-barcode"></i>
-          <h2>BRAND IDENTITY</h2>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <a href="#">VIEW DETAIL</a>
-        </article>
+  <!-- //탭기능부여 -->
+  <section id="services">
+    <nav class="controls">
+      <h1>
+        <i>logo</i>
+      </h1>
+      <ul class="btns">
+        <li class="on"><i>BRANDIDENTITY1</i></li>
+        <li><i>BRANDIDENTITY2</i></li>
+        <li><i>BRANDIDENTITY3</i></li>
+        <li><i>BRANDIDENTITY4</i></li>
+        <li><i>BRANDIDENTITY5</i></li>
+        <li><i>BRANDIDENTITY6</i></li>
+      </ul>
+    </nav>
 
-   
-      </div>
-    </div> 
+    <div class="wrap">
+      <article class="on">
+        <div class="pic">
+          <img src="img/img1.jpg" alt="어쩌꾸">
+        </div>
+        <h2>. 02 BRANDIDENTITY1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto enim adipisci tempora vero tempore debitis,
+          repellat nam provident laudantium minima accusantium! Vero, dolor tenetur dolores fuga quia porro repellat
+          modi!</p>
+        <a href="#">MORE</a>
+      </article>
+      <article>
+        <div class="pic">
+          <img src="img/img1.jpg" alt="어쩌꾸">
+        </div>
+        <h2>. 02 BRANDIDENTITY1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto enim adipisci tempora vero tempore debitis,
+          repellat nam provident laudantium minima accusantium! Vero, dolor tenetur dolores fuga quia porro repellat
+          modi!</p>
+        <a href="#">MORE</a>
+      </article>
+      <article>
+        <div class="pic">
+          <img src="img/img1.jpg" alt="어쩌꾸">
+        </div>
+        <h2>. 02 BRANDIDENTITY1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto enim adipisci tempora vero tempore debitis,
+          repellat nam provident laudantium minima accusantium! Vero, dolor tenetur dolores fuga quia porro repellat
+          modi!</p>
+        <a href="#">MORE</a>
+      </article>
+      <article>
+        <div class="pic">
+          <img src="img/img1.jpg" alt="어쩌꾸">
+        </div>
+        <h2>. 02 BRANDIDENTITY1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto enim adipisci tempora vero tempore debitis,
+          repellat nam provident laudantium minima accusantium! Vero, dolor tenetur dolores fuga quia porro repellat
+          modi!</p>
+        <a href="#">MORE</a>
+      </article>
+      <article>
+        <div class="pic">
+          <img src="img/img1.jpg" alt="어쩌꾸">
+        </div>
+        <h2>. 02 BRANDIDENTITY1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto enim adipisci tempora vero tempore debitis,
+          repellat nam provident laudantium minima accusantium! Vero, dolor tenetur dolores fuga quia porro repellat
+          modi!</p>
+        <a href="#">MORE</a>
+      </article>
+      <article>
+        <div class="pic">
+          <img src="img/img1.jpg" alt="어쩌꾸">
+        </div>
+        <h2>. 02 BRANDIDENTITY1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto enim adipisci tempora vero tempore debitis,
+          repellat nam provident laudantium minima accusantium! Vero, dolor tenetur dolores fuga quia porro repellat
+          modi!</p>
+        <a href="#">MORE</a>
+      </article>
+    </div>
   </section>
-  
+
+
+  <!-- 슬라이더_루프 부여 -->
+  <section id="LatestProjects">
+    <h1>
+      <i>logo</i>
+    </h1>
+    <article class="slider">
+      <ul>
+        <li data-index="1">1</li>
+        <li data-index="2">2</li>
+        <li data-index="3">3</li>
+      </ul>
+    </article>
+  </section>
+
+
   <section id="banner">
     <div class="inner">
       <h1>Lorem ipsum dolor sit amet consectetur.</h1>
@@ -132,58 +215,9 @@
     </div>
   </section>
 
-  <section id="comments">
-    <div class="inner">
-      <h1>RECENT COMMENTS</h1>
-      <ul>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB FROM COMMUNITY </a>
-          <span>2022.11.24</span>
-        </li>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB</a>
-          <span>2022.11.24</span>
-        </li>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB</a>
-          <span>2022.11.24</span>
-        </li>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB</a>
-          <span>2022.11.24</span>
-        </li>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB</a>
-          <span>2022.11.24</span>
-        </li>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB</a>
-          <span>2022.11.24</span>
-        </li>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB</a>
-          <span>2022.11.24</span>
-        </li>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB</a>
-          <span>2022.11.24</span>
-        </li>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB</a>
-          <span>2022.11.24</span>
-        </li>
-        <li>
-          <a href="#">HERE COMES CONTENTS TITLE FROM COMMUNITY DB</a>
-          <span>2022.11.24</span>
-        </li>
-
-      </ul>
-    </div>
-  </section>
-
   <footer id="footer">
     <div class="inner">
-      <h1>DCODELAB</h1>
+      <h1>Interior Remodeling</h1>
       <ul>
         <li><a href="#">POLICY</a></li>
         <li><a href="#">TERMS</a></li>
@@ -197,7 +231,7 @@
       </address>
       <p>Copyright &copy; 2022 DCODELAB ALL Right reserved</p>
     </div>
-  </footer> -->
+  </footer>
 
 
 </body>
