12/7 css 업데이트(탭메뉴수정중)

--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
 
   <figure id="visual">
     <div class="inner">
-      <div class="pic">
-      </div>
-      <div class="wrap">
-        <h1>DO YOU WANT TO BE <span></span>CREATIVE?<span></span></h1>
-      </div>
+      <h1>DO YOU WANT TO BE <span>CREATIVE?</span></h1>
     </div>
   </figure>
 
@@ -138,128 +134,152 @@
   <section id="services">
     <div class="inner">
       <h1>OUR SERVICES</h1>
-      <!-- 로고 묶음 -->
-      <div class="wrap1">
-        <ul class="btns">
-          <li class="on">
-            <div class="icon">
-              <img src="img/services_living-room-1606197.png" alt="거실아이콘">
-            </div>
-          </li>
-          <li>
-            <div class="icon">
-              <img src="img/services_kitchen-1606177.png" alt="주방아이콘">
-            </div>
-          </li>
-          <li>
-            <div class="icon">
-              <img src="img/services_bed-1606220.png" alt="침실아이콘">
-            </div>
-          </li>
-          <li>
-            <div class="icon">
-              <img src="img/services_cradle-1606215.png" alt="아이방아이콘">
-            </div>
-          </li>
-          <li>
-            <div class="icon">
-              <img src="img/services_bathtub-1606180.png" alt="욕실아이콘">
-            </div>
-          </li>
-          <li>
-            <div class="icon">
-              <img src="img/services_door-1606229.png" alt="현관아이콘">
-            </div>
-          </li>
-        </ul>
-      </div>
+      <dl class="tab">
+        <dt class="on">
+          <div class="icon">
+            <img src="img/services_living-room-1606197.png" alt="거실아이콘">
+          </div>
+        </dt>
 
-      <div class="wrap2">
-        <article class="on">
-          <div class="MorePic">
-            <img src="img/거실.png" alt="거실인테리어사진">
+        <dd class="on">
+          <article>
+            <div class="Pic">
+              <img src="img/거실.png" alt="거실인테리어사진">
+            </div>
+
+            <div class="inner">
+              <h2>Living-room</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+                ipsa
+                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+                neque non optio eligendi?
+              </p>
+              <a href="#">MORE</a>
+            </div>
+          </article>
+        </dd>
+
+        <dt>
+          <div class="icon">
+            <img src="img/services_kitchen-1606177.png" alt="주방아이콘">
           </div>
-          <div class="inner">
-            <h2>Living-Room</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus ipsa
-              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-              neque non optio eligendi?
-            </p>
-            <a href="#">MORE</a>
+        </dt>
+        <dd>
+          <article>
+            <div class="pic">
+              <img src="img/주방.jpg" alt="주방인테리어사진">
+            </div>
+
+            <div class="inner">
+              <h2>Kitchen</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+                ipsa
+                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnistiis! Consequuntur voluptatum omnis
+                culpa dolorem laboriosam molestiae
+                excepum omnis culpa dolorem laboriosam molestiae
+                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+                neque non optio eligendi?
+              </p>
+              <a href="#">MORE</a>
+            </div>
+          </article>
+
+        </dd>
+
+        <dt>
+          <div class="icon">
+            <img src="img/services_bed-1606220.png" alt="침실아이콘">
           </div>
-        </article>
-        <article>
-          <div class="pic">
-            <img src="img/주방.jpg" alt="주방인테리어사진">
+        </dt>
+        <dd>
+          <article>
+            <div class="pic">
+              <img src="img/침실.jpg" alt="침실인테리어사진">
+            </div>
+            <div class="inner">
+              <h2>Bed-Room</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+                ipsa
+                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+                neque non optio eligendi?
+              </p>
+              <a href="#">MORE</a>
+            </div>
+          </article>
+        </dd>
+
+        <dt>
+          <div class="icon">
+            <img src="img/services_cradle-1606215.png" alt="아이방아이콘">
           </div>
-          <div class="inner">
-            <h2>Kitchen</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus ipsa
-              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-              neque non optio eligendi?
-            </p>
-            <a href="#">MORE</a>
+        </dt>
+        <dd>
+          <article>
+            <div class="pic">
+              <img src="img/아이방.jpg" alt="아이방인테리어사진">
+            </div>
+            <div class="inner">
+              <h2>Nursery-Room</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+                ipsa
+                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+                neque non optio eligendi?
+              </p>
+              <a href="#">MORE</a>
+            </div>
+          </article>
+        </dd>
+
+        <dt>
+          <div class="icon">
+            <img src="img/services_bathtub-1606180.png" alt="욕실아이콘">
           </div>
-        </article>
-        <article>
-          <div class="pic">
-            <img src="img/침실.jpg" alt="침실인테리어사진">
+        </dt>
+        <dd>
+          <article>
+            <div class="pic">
+              <img src="img/욕실.jpg" alt="욕실인테리어사진">
+            </div>
+            <div class="inner">
+              <h2>Bathroom</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+                ipsa
+                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+                neque non optio eligendi?
+              </p>
+              <a href="#">MORE</a>
+            </div>
+          </article>
+        </dd>
+
+        <dt>
+          <div class="icon">
+            <img src="img/services_door-1606229.png" alt="현관아이콘">
           </div>
-          <div class="inner">
-            <h2>Bed-Room</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus ipsa
-              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-              neque non optio eligendi?
-            </p>
-            <a href="#">MORE</a>
-          </div>
-        </article>
-        <article>
-          <div class="pic">
-            <img src="img/아이방.jpg" alt="아이방인테리어사진">
-          </div>
-          <div class="inner">
-            <h2>Nursery-Room</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus ipsa
-              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-              neque non optio eligendi?
-            </p>
-            <a href="#">MORE</a>
-          </div>
-        </article>
-        <article>
-          <div class="pic">
-            <img src="img/욕실.jpg" alt="욕실인테리어사진">
-          </div>
-          <div class="inner">
-            <h2>Bathroom</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus ipsa
-              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-              neque non optio eligendi?
-            </p>
-            <a href="#">MORE</a>
-          </div>
-        </article>
-        <article>
-          <div class="pic">
-            <img src="img/현관.jpg" alt="현관인테리어사진">
-          </div>
-          <div class="inner">
-            <h2>Front door</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus ipsa
-              excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-              neque non optio eligendi?
-            </p>
-            <a href="#">MORE</a>
-          </div>
-        </article>
-      </div>
+        </dt>
+        <dd>
+          <article>
+            <div class="pic">
+              <img src="img/현관.jpg" alt="현관인테리어사진">
+            </div>
+            <div class="inner">
+              <h2>Front door</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+                ipsa
+                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
+                neque non optio eligendi?
+              </p>
+              <a href="#">MORE</a>
+            </div>
+          </article>
+        </dd>
+      </dl>
     </div>
   </section>
 
