12/7 css 업데이트(탭메뉴수정중222)

--- a/index.html
+++ b/index.html
@@ -135,23 +135,26 @@
     <div class="inner">
       <h1>OUR SERVICES</h1>
       <dl class="tab">
+
         <dt class="on">
           <div class="icon">
             <img src="img/services_living-room-1606197.png" alt="거실아이콘">
           </div>
         </dt>
-
         <dd class="on">
           <article>
-            <div class="Pic">
+            <div class="pic">
               <img src="img/거실.png" alt="거실인테리어사진">
             </div>
 
-            <div class="inner">
-              <h2>Living-room</h2>
+            <div class="wrap">
+              <h2>Kitchen</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
                 ipsa
+                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnistiis! Consequuntur voluptatum omnis
+                culpa dolorem laboriosam molestiae
+                excepum omnis culpa dolorem laboriosam molestiae
                 excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
                 neque non optio eligendi?
               </p>
@@ -171,7 +174,7 @@
               <img src="img/주방.jpg" alt="주방인테리어사진">
             </div>
 
-            <div class="inner">
+            <div class="wrap">
               <h2>Kitchen</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
@@ -185,7 +188,6 @@
               <a href="#">MORE</a>
             </div>
           </article>
-
         </dd>
 
         <dt>
@@ -198,7 +200,7 @@
             <div class="pic">
               <img src="img/침실.jpg" alt="침실인테리어사진">
             </div>
-            <div class="inner">
+            <div class="wrap">
               <h2>Bed-Room</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
@@ -221,7 +223,7 @@
             <div class="pic">
               <img src="img/아이방.jpg" alt="아이방인테리어사진">
             </div>
-            <div class="inner">
+            <div class="wrap">
               <h2>Nursery-Room</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
@@ -244,7 +246,7 @@
             <div class="pic">
               <img src="img/욕실.jpg" alt="욕실인테리어사진">
             </div>
-            <div class="inner">
+            <div class="wrap">
               <h2>Bathroom</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
@@ -267,7 +269,7 @@
             <div class="pic">
               <img src="img/현관.jpg" alt="현관인테리어사진">
             </div>
-            <div class="inner">
+            <div class="wrap">
               <h2>Front door</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
