12/7 css 업데이트(탭메뉴수정중333)

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
 
             <div class="wrap">
-              <h2>Kitchen</h2>
+              <h2>Living-room</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
                 ipsa
