12/7 div에서  a태그로 바꾸기전

--- a/index.html
+++ b/index.html
@@ -273,9 +273,8 @@
               <h2>Front door</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
-                ipsa
-                excepturi, odit ipsum fuga blanditiis! Consequuntur voluptatum omnis culpa dolorem laboriosam molestiae
-                neque non optio eligendi?
+                ipsaLorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
+                ipsaLorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at
               </p>
               <a href="#">MORE</a>
             </div>
