12/7 슬라이더부분 완성

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/c12878d3ba.js" crossorigin="anonymous"></script>
   <script defer src="js/main.js"></script>
+  <script defer src="js/anime.js"></script>
 </head>
 
 <body>
@@ -288,22 +289,23 @@
   <!-- 슬라이더_루프 부여 -->
   <section id="LatestProjects">
     <div class="inner">
-      <h1>
-        <i>logo</i>
-      </h1>
+      <h1>LATEST PROJECTS</h1>
+      <ul>
+        <l1><a href="#">Apartment/ House</a></l1>
+        <l1><a href="#">Hospital / Clinic</a></l1>
+        <l1><a href="#">Cafe / Restaurant</a></l1>
+        <l1><a href="#">Office / Class</a></l1>
+      </ul>
       <article class="slider">
         <ul>
-          <li data-index="1">1</li>
-          <li data-index="2">2</li>
-          <li data-index="3">3</li>
-          <li data-index="4">4</li>
+          <li data-index="1"></li>
+          <li data-index="2"></li>
+          <li data-index="3"></li>
         </ul>
       </article>
-
       <a href="#" class="prev">
         <img src="img/btnPrev.png" alt="">
       </a>
-
       <a href="#" class="next">
         <img src="img/btnNext.png" alt="">
       </a>
