12/8  탭메뉴실패성

--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
     <div class="inner">
       <h1>OUR SERVICES</h1>
       <dl class="tab">
-
         <dt class="on">
           <div class="icon">
             <img src="img/services_living-room-1606197.png" alt="거실아이콘">
@@ -286,15 +285,16 @@
   </section>
 
 
+
   <!-- 슬라이더_루프 부여 -->
   <section id="LatestProjects">
     <div class="inner">
       <h1>LATEST PROJECTS</h1>
       <ul>
-        <l1><a href="#">Apartment/ House</a></l1>
-        <l1><a href="#">Hospital / Clinic</a></l1>
-        <l1><a href="#">Cafe / Restaurant</a></l1>
-        <l1><a href="#">Office / Class</a></l1>
+        <l1><a href="javascript:void(0)">Apartment/ House</a></l1>
+        <l1><a href="javascript:void(0)">Hospital / Clinic</a></l1>
+        <l1><a href="javascript:void(0)">Cafe / Restaurant</a></l1>
+        <l1><a href="javascript:void(0)">Office / Class</a></l1>
       </ul>
       <article class="slider">
         <ul>
@@ -304,10 +304,10 @@
         </ul>
       </article>
       <a href="#" class="prev">
-        <img src="img/btnPrev.png" alt="">
+        <strong>prev</strong>
       </a>
       <a href="#" class="next">
-        <img src="img/btnNext.png" alt="">
+        <strong>next</strong>
       </a>
     </div>
   </section>
